--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import "@fontsource-variable/onest"
 
 import Header from "../components/Header.astro"
 import Footer from "../components/Footer.astro"
+import Particles from "../components/Particles.astro"
 import { ViewTransitions } from "astro:transitions"
 
 interface Props {
@@ -26,12 +27,14 @@ const { description, title } = Astro.props
   </head>
 
   <body class="relative text-black dark:text-white h-full w-full bg-slate-950">
+    <Particles />
     <div
       class="absolute top-0 bottom-0 z-[-2] min-h-screen w-full bg-gray-100 dark:bg-gray-950
-      bg-radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(217,216,255,0.5),rgba(255,255,255,0.9))
-      dark:bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(68, 68, 68, 0.3),rgba(255,255,255,0))]"
+      bg-[radial-gradient(circle_at_50%_50%,rgba(255,255,255,0.1),rgba(255,255,255,0)_50%)]
+      dark:bg-[radial-gradient(circle_at_50%_50%,rgba(0,0,0,0.1),rgba(0,0,0,0)_50%)]"
     >
-    <div class="absolute top-0 left-0 right-0 h-1/2 bg-[linear-gradient(to_right,#4f4f4f2e_1px,transparent_1px),linear-gradient(to_bottom,#4f4f4f2e_1px,transparent_1px)] bg-[size:14px_24px] [mask-image:radial-gradient(ellipse_60%_50%_at_50%_0%,#000_70%,transparent_100%)]"></div>
+    <div class="absolute top-0 left-0 right-0 h-full bg-[radial-gradient(circle_at_50%_50%,rgba(0,0,0,0.05)_1px,transparent_1px)] bg-[size:20px_20px]"></div>
+    <div class="absolute top-0 left-0 right-0 h-full bg-[linear-gradient(to_bottom,rgba(255,255,255,0.1),rgba(255,255,255,0)_20%)] dark:bg-[linear-gradient(to_bottom,rgba(0,0,0,0.1),rgba(0,0,0,0)_20%)]"></div>
     </div>
     <Header />
     <slot />
