--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -2,8 +2,8 @@
 import ExperienceItem from "./ExperienceItem.astro"
 const EXPERIENCE = [
   {
-    date: "10/2024 - Actualmente...",
-    title: "Desarrollador",
+    date: "09/2024 - Actualmente...",
+    title: "Desarrollador Full Stack",
     company: "EPEM",
     description:
       "Ultilizando PHP con JavaScript para realizar o mantenimento y mejora de un sistema web de la empresa EPEM, y implementando nuevos modulos en el sistema."
