--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,7 @@ const currentYear = new Date().getFullYear()
   >
     <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
       >© {currentYear}
-      <a href="" class="hover:underline">Renato Mitsuhiro Hirakawa Eiwa</a>.
+      <a href="" class="hover:underline">Gabriel W. Silva de Araujo</a>.
     </span>
     <ul
       class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
@@ -19,7 +19,7 @@ const currentYear = new Date().getFullYear()
         <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
       </li>
       <li>
-        <a id="contacto" href="mailto:mitsueiwa333@gmail.com" class="hover:underline"
+        <a id="contacto" href="" class="hover:underline"
           >Contacto</a
         >
       </li>
