--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,9 +18,9 @@ const navItems = [
     url: "/#proyectos",
   },
   {
-    title: "Tecnologías",
-    label: "tecnologías",
-    url: "/#tecnologias",
+    title: "Certificaciones",
+    label: "Certificados",
+    url: "/#Certificados",
   },
   {
     title: "Sobre mí",
@@ -30,7 +30,7 @@ const navItems = [
   {
     title: "Contacto",
     label: "contacto",
-    url: "mailto:mitsueiwa333@gmail.com",
+    url: "mailto:gabrielsilvadearaujo45@gmail.com",
   },
 ]
 ---
@@ -78,7 +78,7 @@ const navItems = [
     const observer = new IntersectionObserver(callback, {
       root: null,
       rootMargin: "0px",
-      threshold: 0.3,
+      threshold: 1.0,
     })
 
     sections.forEach((section) => {
