--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-const personalImageAlt = "Renato Hirakawa"
+const personalImageAlt = "Gabriel W. Silva de Araujo"
 import Badge from "@/components/Badge.astro"
 import LinkedInIcon from "@/components/icons/LinkedIn.astro"
 import MailIcon from "@/components/icons/Mail.astro"
@@ -12,11 +12,11 @@ import CVdownload from "@/components/icons/CVdownload.astro"
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full size-16"
-      src="/renato.png"
+      src="/gabriel.jpg"
       alt={personalImageAlt}
     />
     <a
-      href="https://linkedin.com/in/renatohirakawa"
+      href="https://linkedin.com/in/gabriel-william-039b97306"
       target="_blank"
       rel="noopener"
       class="flex items-center transition md:justify-center md:hover:scale-105"
@@ -35,7 +35,7 @@ import CVdownload from "@/components/icons/CVdownload.astro"
     <strong>Cursando Análisis de Sistemas Informáticos y Desarrollador Full Stack.</strong>
   </p>
   <nav class="flex flex-wrap gap-4 mt-8">
-    <SocialPill href="/CV_GabrielWilliamSilva.pdf" download="CV_GabrielWilliamSilva.pdf">
+    <SocialPill href="/Curriculo(GABRIEL).pdf" download="Curriculo(GABRIEL).pdf">
       <CVdownload class="size-4" />
       CV
     </SocialPill>
@@ -43,7 +43,7 @@ import CVdownload from "@/components/icons/CVdownload.astro"
       <LinkedInIcon class="size-4" />
       LinkedIn
     </SocialPill>
-    <SocialPill href="https://github.com/GabrielWilliamSilva">
+    <SocialPill href="https://github.com/gabrielwsa">
       <GitHubIcon class="size-4" />
       GitHub
     </SocialPill>
