--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -7,13 +7,23 @@ const personalImageAlt = "Gabriel William"
     class="[&>p]:mb-4 [&>p>strong]:text-yellow-500 dark:[&>p>strong]:text-yellow-100 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Gabriel W. Silva de Araujo. Soy <strong>Cursando Análisis de Sistemas Informáticos y Desarrollador Full Stack</strong
-      >.
+      Me llamo Gabriel W. Silva de Araujo. Soy <strong>Cursando Análisis de Sistemas Informáticos y Desarrollador Full Stack</strong>.
     </p>
 
     <p>
-      Cuento con capacidad para <strong>trabajar en equipo, empatía, adaptabilidad y resolución de problemas.</strong> Actualmente me encuentro interesado en continuar desarrollando mi carrera dentro del área IT.
+      Soy un profesional <strong>persistente, determinado y proactivo</strong>, con un enfoque orientado al <strong>aprendizaje continuo</strong> y la <strong>mejora constante</strong>. Mi actitud esforzada me impulsa a enfrentar desafíos con dedicación, buscando siempre superar expectativas.
+    </p>
+
+    <p>
+      Como persona <strong>responsable y detallista</strong>, priorizo la calidad en cada tarea, asegurando que los proyectos se ejecuten con <strong>precisión y eficiencia</strong>. Me apasiona adquirir nuevos conocimientos y dominar <strong>tecnologías emergentes</strong>.
+    </p>
+
+    <p>
+      Valoro el <strong>trabajo en equipo</strong> y creo firmemente en la <strong>colaboración</strong> como motor para alcanzar metas comunes. Mi compromiso es aportar valor a través de <strong>soluciones innovadoras</strong>, manteniendo siempre un enfoque <strong>estructurado y orientado a resultados</strong>.
+    </p>
+
+    <p>
+      Cuento con capacidad para <strong>trabajar en equipo, empatía, adaptabilidad y resolución de problemas</strong>. Actualmente me encuentro interesado en continuar desarrollando mi carrera dentro del área IT. ¡Soy de esos que no se detienen hasta lograr lo propuesto!
     </p>
   </div>
-
 </article>
