--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -19,10 +19,12 @@ const EXPERIENCE = [
 ]
 ---
 
-<ol class="relative mt-16">
+<ol class="relative mt-16 space-y-12">
   {
     EXPERIENCE.map((experience) => (
-      <li class="">
+      <li class="group relative">
+        <div class="absolute left-0 top-0 h-full w-0.5 bg-gray-200 dark:bg-gray-700"></div>
+        <div class="absolute left-0 top-0 h-3 w-3 rounded-full bg-blue-500 dark:bg-blue-400 -translate-x-1.5"></div>
         <ExperienceItem {...experience} />
       </li>
     ))
