--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -12,44 +12,44 @@ interface Props {
 const { title, company, description, link, date } = Astro.props
 ---
 
-<div
-  class="relative mx-12 pb-12 grid before:absolute before:left-[-35px] before:block before:h-full before:border-l-2 before:border-black/20 dark:before:border-white/15 before:content-[''] md:grid-cols-5 md:gap-10 md:space-x-4]"
->
-  <div class="relative pb-12 md:col-span-2">
+<div class="relative pl-8">
+  <div class="absolute left-0 top-0 h-full w-0.5 bg-gray-200 dark:bg-gray-700"></div>
+  <div class="absolute left-0 top-0 h-3 w-3 rounded-full bg-blue-500 dark:bg-blue-400 -translate-x-1.5"></div>
+  
+  <div class="relative">
     <div class="sticky top-0">
-      <span class="text-[#662d91] -left-[42px] absolute rounded-full text-5xl"
-        >&bull;</span
-      >
-
-      <h3 class="text-xl font-bold text-[#662d91]">{title}</h3>
-      <h4 class="font-semibold text-xl text-gray-600 dark:text-white">{company}</h4>
-      <time class="p-0 m-0 text-sm text-gray-600/80 dark:text-white/80">{date}</time>
+      <div class="flex flex-col gap-1">
+        <h3 class="text-xl font-bold text-blue-500 dark:text-blue-400 group-hover:text-blue-600 dark:group-hover:text-blue-300 transition-colors duration-300">{title}</h3>
+        <h4 class="text-lg font-semibold text-gray-800 dark:text-white">{company}</h4>
+        <time class="text-sm text-gray-600/80 dark:text-white/80">{date}</time>
+      </div>
     </div>
   </div>
-  <div class="relative flex flex-col gap-2 pb-4 text-gray-600 dark:text-gray-300 md:col-span-3">
-    {description}
+  
+  <div class="relative mt-4 text-gray-600 dark:text-gray-300">
+    <p class="leading-relaxed">{description}</p>
     {
       link && (
-        <LinkInline href={link}>
-          Saber más{" "}
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="w-5 icon icon-tabler icon-tabler-chevron-right"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            stroke-width="2"
-            stroke="currentColor"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <>
+        <div class="mt-4">
+          <LinkInline href={link} class="inline-flex items-center gap-1 text-blue-500 hover:text-blue-600 dark:hover:text-blue-400 transition-colors duration-300">
+            Saber más{" "}
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="w-5 icon icon-tabler icon-tabler-chevron-right"
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              stroke-width="2"
+              stroke="currentColor"
+              fill="none"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+            >
               <path stroke="none" d="M0 0h24v24H0z" fill="none" />
               <path d="M9 6l6 6l-6 6" />
-            </>
-          </svg>
-        </LinkInline>
+            </svg>
+          </LinkInline>
+        </div>
       )
     }
   </div>
