--- a/src/components/Certifications.astro
+++ b/src/components/Certifications.astro
@@ -9,7 +9,7 @@ const certifications = await getCollection('certifications');
   {
     certifications.map((certification: { data: { title: string; description: string; hours: string; file: string } }) => (
       <a 
-        href={certification.data.file} 
+        href={`/certifications/${certification.data.file.split('/').pop()}`} 
         target="_blank" 
         rel="noopener noreferrer"
         class="group relative block bg-white/50 dark:bg-gray-800/50 p-6 rounded-xl shadow-lg hover:shadow-xl transition-all duration-300 hover:scale-[1.02]"
