actualizacion de curriculum

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -7,7 +7,7 @@ const personalImageAlt = "Gabriel William"
     class="[&>p]:mb-6 [&>p>strong]:text-blue-500 dark:[&>p>strong]:text-blue-400 [&>p>strong]:font-semibold text-pretty w-full"
   >
     <p class="text-lg leading-relaxed">
-      Me llamo Gabriel W. Silva de Araujo. Soy <strong>Cursando Análisis de Sistemas Informáticos y Desarrollador Full Stack</strong>.
+      Me llamo Gabriel W. Silva de Araujo. <strong>Cursando Análisis de Sistemas Informáticos y Desarrollador Full Stack</strong>.
     </p>
 
     <p class="text-lg leading-relaxed">
